<resources>
    <string name="app_name">Работа</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--  Navigation drawer  -->
    <string name="menu_schedule">График</string>
    <string name="menu_siz">Спецодежда</string>
    <string name="menu_tool">Инструмент</string>

    <!--  Общие  -->
    <string name="ok">OK</string>
    <string name="cancel">Отмена</string>
    <string name="add">Добавить</string>
    <string name="update">Обновить</string>
    <string name="remove">Удалить</string>
    <string name="settings">Настройки</string>

    <string-array name="months">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </string-array>

    <!--  График  -->

    <!--  Спецодежда  -->
    <string name="siz_name">Наименование</string>
    <string name="siz_month_and_year">%1$s %2$s</string>
    <string name="siz_period">Срок в месяцах</string>
    <string name="siz_begin_date">Дата получения</string>
    <string name="siz_until_wear">До износа</string>
    <string name="siz_year">Год</string>
    <string name="siz_today">Сегодня</string>

    <!--  Инструмент  -->
    <string name="tool_name">Наименование</string>
    <string name="tool_card_count">На карточке</string>
    <string name="tool_real_count">В наличии</string>

</resources>